package com.moneymanager.model;

public enum TransactionType {
    INCOME,
    EXPENSE
}
